<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kirosc.mathisfun.MainActivity">

    <TextView
        android:id="@+id/question_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/question_tv"
        tools:text="Q?" />

    <TextView
        android:id="@+id/question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/textDarkPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Question" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/answerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/answer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInput_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <com.dd.morphingbutton.MorphingButton
        android:id="@+id/submit_btn"
        android:layout_width="@dimen/nextButton_width"
        android:layout_height="@dimen/uniformButton_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/textLightPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerLayout" />

    <com.dd.morphingbutton.MorphingButton
        android:id="@+id/next_btn"
        android:layout_width="@dimen/nextButton_width"
        android:layout_height="@dimen/uniformButton_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/textLightPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/time_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:donut_finished_color="@color/colorPrimary"
        app:donut_finished_stroke_width="2dp"
        app:donut_text="5:00"
        app:donut_text_size="16sp"
        app:donut_unfinished_stroke_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        custom:donut_progress="100" />
</android.support.constraint.ConstraintLayout>